[gd_scene load_steps=5 format=3 uid="uid://c7aq5q8yg0kqh"]

[ext_resource type="Script" path="res://Scripts/Menus/controls_menu.gd" id="1_8i1bp"]
[ext_resource type="PackedScene" uid="uid://ia105vog3b2m" path="res://Scenes/UI/input_button.tscn" id="2_t3prg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5snem"]
bg_color = Color(0.0084734, 0.00789951, 0.00957157, 0.596078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nc0qi"]
bg_color = Color(0.760784, 0.564706, 0.0196078, 0.6)

[node name="ControlsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8i1bp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -151.0
offset_right = 260.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_t3prg")]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_5snem")
theme_override_styles/hover = SubResource("StyleBoxFlat_nc0qi")
text = "Reset"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
